tests/integration/error/assign_immutable.alo
// expect-error: Cannot assign to immutable variable 'value'

fun main() -> void {
    imut value: int = 1;
    value = 2;
}
